# cats-vs-bread

./: .gitignore  .pre-commit-config.yaml  README.md  cats_vs_bread.py  docker-compose.yaml  download_data.py  dvc.yaml  infer.py  pyproject.toml  train.py
.dvc/: config
_dvc_test/: file.txt.dvc
cats_vs_bread/: configs.py  train.py
cats_vs_bread/models/: data_module.py  lightning_module.py  model.py
cats_vs_bread/utils/: dvc_utils.py  git_utils.py  logging_utils.py
configs/: config.yaml
configs/data/: default.yaml
configs/logger/: default.yaml
configs/model/: default.yaml
configs/train/: default.yaml
data/: train.dvc  train.tar.gz.dvc  val.dvc  val.tar.gz.dvc
