[project]
name = "cats-vs-bread"
version = "0.1.0"
description = "Cats vs bread image classification training package."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.2,<2.4",
  "torchvision>=0.17,<0.19",
  "lightning>=2.2,<2.4",
  "torchmetrics>=1.3,<1.5",
  "hydra-core>=1.3,<1.4",
  "mlflow>=2.10,<3.0",
  "requests>=2.31,<3.0",
  "pillow>=10.2,<11.0",
  "tqdm>=4.66,<5.0",
  "dvc>=3.50,<4.0",
  "omegaconf>=2.3,<2.4",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.6,<4.0",
  "ruff>=0.4.7,<0.5.0",
  "pytest>=8.1,<9.0",
  "black>=24.4,<25.0",
  "isort>=5.13,<6.0",
  "mypy>=1.10,<2.0",
]

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["cats_vs_bread"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle (flake8)
  "F",    # pyflakes
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "I",    # isort
  "ANN",  # flake8-annotations (type hints)
  "TCH",  # flake8-type-checking (typing imports)
]
ignore = [
    "UP015",
    "ANN101",
    "TCH003",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
